@startuml

title __LOGIN's Class Diagram__\n

  namespace Login {
    class Login.Login {
        {static} + main()
        + start()
    }
  }
  

  namespace Login {
    class Login.LoginController {
        {static} + currentUser : User
        - accountType : ComboBox<String>
        - background : ImageView
        - backgroundLabel : Label
        - connectionLabel : Label
        - credentialsLabel : Label
        - loginButton : Button
        - meetingBookerLabel : Label
        - passwordField : PasswordField
        - registerButton : Button
        - usernameField : TextField
        + adminLogin()
        + customerLogin()
        + initialize()
        + login()
        + registerUser()
    }
  }
  

  namespace Login {
    class Login.LoginModel {
        ~ connection : Connection
        + LoginModel()
        + isConnected()
        + isLogin()
    }
  }
  

  namespace Login {
    class Login.User {
        - email : String
        - firstname : String
        - lastname : String
        - userID : int
        - username : String
        + User()
        + getEmail()
        + getFirstname()
        + getLastname()
        + getUserID()
        + getUsername()
    }
  }
  

  Login.Login -up-|> javafx.application.Application
  Login.LoginController .up.|> javafx.fxml.Initializable
  Login.LoginController o-- Login.LoginModel : loginModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
